Dave Express App

--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,16 @@ buildscript {
         // Check that you have the following line (if not, add it):
         google()  // Google's Maven repository
         jcenter()
+        mavenCentral()
+        gradlePluginPortal()
 
     }
     dependencies {
         // Add this line
         classpath 'com.google.gms:google-services:4.3.10'
         classpath "com.android.tools.build:gradle:7.1.3"
+        classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.14.0, 0.99.99]'
+//        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
 
     }
 }
@@ -29,6 +33,7 @@ allprojects {
         // Check that you have the following line (if not, add it):
         google()  // Google's Maven repository
         jcenter()
+        mavenCentral()
 
     }
 }
