--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,14 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
     id 'kotlin-parcelize'
+    id 'kotlin-kapt'
+    id 'com.onesignal.androidsdk.onesignal-gradle-plugin'
+//    id 'dagger.hilt.android.plugin'
 }
 
 android {
     compileSdk 31
-    buildToolsVersion '31.0.0'
+    buildToolsVersion '33.0.0'
     ndkVersion '25.0.8221429 rc2'
 
 
@@ -24,12 +27,17 @@ android {
 
 buildFeatures{
     viewBinding true
+    dataBinding true
 }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    kapt {
+        correctErrorTypes = true
     }
 
     compileOptions {
@@ -47,13 +55,15 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.3'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.1'
+    implementation 'androidx.fragment:fragment-ktx:1.5.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
     testImplementation 'junit:junit:4.13.2'
@@ -67,4 +77,16 @@ dependencies {
 
     implementation 'com.mikhaellopez:circularimageview:4.3.0'
     implementation 'com.airbnb.android:lottie:5.2.0'
+
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.5.1'
+
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+
+    implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
+
+
+//    implementation 'com.google.dagger:hilt-android:2.38.1'
+//    kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
+//    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+
 }
