--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 33
     buildToolsVersion '33.0.0'
     ndkVersion '25.0.8221429 rc2'
 
@@ -17,11 +17,13 @@ android {
     defaultConfig {
         applicationId "com.example.daveexpress"
         minSdk 23
-        targetSdk 30
+        targetSdk 32
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+
     }
 
 
@@ -51,10 +53,18 @@ buildFeatures{
 
 
 dependencies {
+
+
+    implementation 'androidx.room:room-runtime:2.4.3'
+    annotationProcessor'androidx.room:room-compiler:2.4.3'
+
+    // To use Kotlin annotation processing tool (kapt)
+    kapt 'androidx.room:room-compiler:2.4.3'
+
     implementation platform('com.google.firebase:firebase-bom:29.3.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.3'
@@ -70,6 +80,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.1.1'
+    implementation 'com.google.android.gms:play-services-auth:20.4.0'
 
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
@@ -78,12 +89,13 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:4.3.0'
     implementation 'com.airbnb.android:lottie:5.2.0'
 
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.5.1'
+    kapt 'androidx.lifecycle:lifecycle-common-java8:2.5.1'
 
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
 
+    implementation 'co.paystack.android:paystack:3.1.3'
 
 //    implementation 'com.google.dagger:hilt-android:2.38.1'
 //    kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
