--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
     dependencies {
         // Add this line
         classpath 'com.google.gms:google-services:4.3.10'
-        classpath "com.android.tools.build:gradle:7.1.3"
+        classpath 'com.android.tools.build:gradle:7.3.1'
         classpath 'gradle.plugin.com.onesignal:onesignal-gradle-plugin:[0.14.0, 0.99.99]'
 //        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
 
@@ -24,7 +24,7 @@ buildscript {
 plugins {
     id 'com.android.application' version '7.1.0-beta03' apply false
     id 'com.android.library' version '7.1.0-beta03' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.20' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
 
 }
 
